Fixed screenshot spacing

--- a/peer_edit/static/css/login.css
+++ b/peer_edit/static/css/login.css
@@ -35,6 +35,7 @@ body {
 	.jumbotron img {
 		padding-top: 0;
 		width: 50%;
+		margin-right: 20px;
 	}
 	.btn-huge {
 		font-size: 36px;
